# delta-sharing-download-as-csv

./: .gitignore  README.md  pyproject.toml
src/delta_sharing_download_as_csv/: app.py  utils.py
